Switch to POSIX sh for everything

--- a/config/flavours/templates/bashrc/templates/default.mustache
+++ b/config/flavours/templates/bashrc/templates/default.mustache
@@ -1,21 +1,21 @@
 printf '
-\e]11;rgb:{{base00-hex-r}}/{{base00-hex-g}}/{{base00-hex-b}}\a
-\e]10;rgb:{{base05-hex-r}}/{{base05-hex-g}}/{{base05-hex-b}}\a
-\e]4;0;rgb:{{base00-hex-r}}/{{base00-hex-g}}/{{base00-hex-b}}\a
-\e]4;1;rgb:{{base08-hex-r}}/{{base08-hex-g}}/{{base08-hex-b}}\a
-\e]4;2;rgb:{{base0B-hex-r}}/{{base0B-hex-g}}/{{base0B-hex-b}}\a
-\e]4;3;rgb:{{base0A-hex-r}}/{{base0A-hex-g}}/{{base0A-hex-b}}\a
-\e]4;4;rgb:{{base0D-hex-r}}/{{base0D-hex-g}}/{{base0D-hex-b}}\a
-\e]4;5;rgb:{{base0E-hex-r}}/{{base0E-hex-g}}/{{base0E-hex-b}}\a
-\e]4;6;rgb:{{base0C-hex-r}}/{{base0C-hex-g}}/{{base0C-hex-b}}\a
-\e]4;7;rgb:{{base05-hex-r}}/{{base05-hex-g}}/{{base05-hex-b}}\a
+\033]11;rgb:{{base00-hex-r}}/{{base00-hex-g}}/{{base00-hex-b}}\a
+\033]10;rgb:{{base05-hex-r}}/{{base05-hex-g}}/{{base05-hex-b}}\a
+\033]4;0;rgb:{{base00-hex-r}}/{{base00-hex-g}}/{{base00-hex-b}}\a
+\033]4;1;rgb:{{base08-hex-r}}/{{base08-hex-g}}/{{base08-hex-b}}\a
+\033]4;2;rgb:{{base0B-hex-r}}/{{base0B-hex-g}}/{{base0B-hex-b}}\a
+\033]4;3;rgb:{{base0A-hex-r}}/{{base0A-hex-g}}/{{base0A-hex-b}}\a
+\033]4;4;rgb:{{base0D-hex-r}}/{{base0D-hex-g}}/{{base0D-hex-b}}\a
+\033]4;5;rgb:{{base0E-hex-r}}/{{base0E-hex-g}}/{{base0E-hex-b}}\a
+\033]4;6;rgb:{{base0C-hex-r}}/{{base0C-hex-g}}/{{base0C-hex-b}}\a
+\033]4;7;rgb:{{base05-hex-r}}/{{base05-hex-g}}/{{base05-hex-b}}\a
 
-\e]4;8;rgb:{{base03-hex-r}}/{{base03-hex-g}}/{{base03-hex-b}}\a
-\e]4;9;rgb:{{base09-hex-r}}/{{base09-hex-g}}/{{base09-hex-b}}\a
-\e]4;10;rgb:{{base01-hex-r}}/{{base01-hex-g}}/{{base01-hex-b}}\a
-\e]4;11;rgb:{{base02-hex-r}}/{{base02-hex-g}}/{{base02-hex-b}}\a
-\e]4;12;rgb:{{base04-hex-r}}/{{base04-hex-g}}/{{base04-hex-b}}\a
-\e]4;13;rgb:{{base06-hex-r}}/{{base06-hex-g}}/{{base06-hex-b}}\a
-\e]4;14;rgb:{{base0F-hex-r}}/{{base0F-hex-g}}/{{base0F-hex-b}}\a
-\e]4;15;rgb:{{base07-hex-r}}/{{base07-hex-g}}/{{base07-hex-b}}\a
+\033]4;8;rgb:{{base03-hex-r}}/{{base03-hex-g}}/{{base03-hex-b}}\a
+\033]4;9;rgb:{{base09-hex-r}}/{{base09-hex-g}}/{{base09-hex-b}}\a
+\033]4;10;rgb:{{base01-hex-r}}/{{base01-hex-g}}/{{base01-hex-b}}\a
+\033]4;11;rgb:{{base02-hex-r}}/{{base02-hex-g}}/{{base02-hex-b}}\a
+\033]4;12;rgb:{{base04-hex-r}}/{{base04-hex-g}}/{{base04-hex-b}}\a
+\033]4;13;rgb:{{base06-hex-r}}/{{base06-hex-g}}/{{base06-hex-b}}\a
+\033]4;14;rgb:{{base0F-hex-r}}/{{base0F-hex-g}}/{{base0F-hex-b}}\a
+\033]4;15;rgb:{{base07-hex-r}}/{{base07-hex-g}}/{{base07-hex-b}}\a
 ' | tr -d '\n '
